fix img being too large in blog component

--- a/src/components/blocks/venue-blog-card/_venue-blog-card.scss
+++ b/src/components/blocks/venue-blog-card/_venue-blog-card.scss
@@ -111,6 +111,7 @@
 
     &--100-width {
       @include bpMinXSmall {
+        position: relative;
         width: 50%;
       }
 
